Bug 428029 - Cannot change axis or plot title font
Summary: Cannot change axis or plot title font
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: 2.8.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-20 18:45 UTC by Matthew Trescott
Modified: 2020-11-07 09:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Trescott 2020-10-20 18:45:55 UTC
SUMMARY
Changing the font-face and size of a plot axis or plot title has no effect. I can select a different font other than the default, but the plot title and axes remain Noto Sans. It is possible to change the plot _title_ font, but only by deleting the entire contents of the text box.

STEPS TO REPRODUCE
1. Create a new Worksheet with an XY-Plot
2. Select a plot axis
3. Attempt to change the title font under the "Title" tab

OBSERVED RESULT
The plot font does not change

EXPECTED RESULT
The font on the plot updates to match my selection

SOFTWARE/OS VERSIONS
Windows: Windows 10 v1903
macOS: Not tested
Linux/KDE Plasma: openSUSE Tumbleweed
(available in About System)
KDE Frameworks Version: 5.71 (Windows), 5.75 (openSUSE)
Qt Version: 5.15.0 (Windows), 5.15.1 (openSUSE)

ADDITIONAL INFORMATION
This bug appears both on Windows and on Linux.
Comment 1 Alexander Semke 2020-10-21 06:38:18 UTC
For me it works for some of the fonts like "Century Schoolbook L 11", "Noto Sans ExtLt 11", "Open Sans 11" and some others but yes, there are many fonts where there is no change visible. Seems to be an issue somewhere, we'll check...
Comment 2 Matthew Trescott 2020-10-21 14:07:58 UTC
Thanks! I should also note that I was able to select a different font by extracting and editing the LML file by hand.
Comment 3 Stefan Gerlach 2020-11-07 09:44:56 UTC
Git commit d6f0b31b598c48adcc8cc9cf50616ab38c92c535 by Stefan Gerlach.
Committed on 07/11/2020 at 09:42.
Pushed by sgerlach into branch 'master'.

Fix changing font of text label for newer Qt versions
FIXED-IN: 2.8.1

M  +1    -1    src/backend/worksheet/TextLabel.cpp
M  +10   -4    src/kdefrontend/widgets/LabelWidget.cpp

https://invent.kde.org/education/labplot/commit/d6f0b31b598c48adcc8cc9cf50616ab38c92c535