Fix changing font of text label for newer Qt versions

BUG: 428029
FIXED-IN: 2.8.1